<resources>
    <string name="title_home">Home</string>
    <string name="title_series">Series</string>
    <string name="title_films">Films</string>
    <string name="title_calendar">Calendar</string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="labelLogin">Login</string>
    <string name="textRegister">Register</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="labelRegister">Register</string>
    <string name="hintRepeatPassword">Repeat Password</string>
    <string name="action_salir">Salir</string>

    <string name="app_name">MyGym</string>
    <string name="background_image">background image</string>
    <string name="entrar">Entrar</string>
    <string name="btnEstiramientos">Estiramientos</string>
    <string name="btnEjercicios">Ejercicios</string>
    <string name="btnRutinas">Rutinas</string>

    <string name="app_icon">App icon</string>
    <string name="welcome">Bienvenido a My Gym</string>

    <string name="nuevaRutina">Añade tu nueva rutina</string>
    <string name="categoria">Categoria: </string>
    <string name="ejercicio">Ejercicio: </string>
    <string name="nseries">Series: </string>
    <string name="repeticiones">Repeticiones: </string>
    <string name="tiempo">Tiempo: </string>
    <string name="obs">Observaciones: </string>

    <string name="btnGuardar">Guardar</string>
    
</resources>
