<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nuevaRutina.view.NuevaRutinaView"
    tools:ignore="MissingDefaultResource">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="206dp"
        android:layout_height="33dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:text="@string/nuevaRutina"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ctg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/categoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <TextView
        android:id="@+id/ejer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/ejercicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctg" />

    <TextView
        android:id="@+id/series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/nseries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ejer" />

    <TextView
        android:id="@+id/rpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/repeticiones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/series" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tiempo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rpt" />

    <TextView
        android:id="@+id/obs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="296dp"
        android:layout_marginRight="296dp"
        android:text="@string/obs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="203dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toEndOf="@+id/ctg"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="203dp"
        android:layout_height="34dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/ejer"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <Button
        android:id="@+id/btnGuargar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/btnGuardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="203dp"
        android:layout_height="34dp"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toEndOf="@+id/series"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="203dp"
        android:layout_height="34dp"
        android:layout_marginTop="224dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toEndOf="@+id/rpt"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="203dp"
        android:layout_height="34dp"
        android:layout_marginTop="284dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toEndOf="@+id/time"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="203dp"
        android:layout_height="34dp"
        android:layout_marginTop="348dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toEndOf="@+id/obs"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />
</android.support.constraint.ConstraintLayout>