<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/btnEjercicios"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="124dp"
        android:background="@drawable/borde_redondo"
        android:fontFamily="@font/qanelas"
        android:text="@string/btnEjercicios"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEstiramientos"
        android:layout_width="133dp"
        android:layout_height="49dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/borde_redondo"
        android:fontFamily="@font/qanelas"
        android:text="@string/btnEstiramientos"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEjercicios" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="408dp"
        android:layout_height="235dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_t" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="411dp"
        android:layout_height="285dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/estiramiento" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="411dp"
        android:layout_height="173dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/rutinas" />

    <Button
        android:id="@+id/btnRutinas"
        android:layout_width="133dp"
        android:layout_height="49dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/borde_redondo"
        android:fontFamily="@font/qanelas"
        android:text="@string/btnRutinas"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEstiramientos"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/estiramiento" />

</android.support.constraint.ConstraintLayout>